--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <h1>Stock & Invoicing</h1>
     <nav>
       <button onclick="openProducts()">Products</button>
-      <button onclick="openCustomers()">Customers</button>
+      <button onclick="opencustomers()">customers</button>
       <button onclick="openInvoices()">Invoices</button>
       <button class="primary" onclick="openInvoice()">New Invoice</button>
       <button onclick="openCashControl()">Cash Control</button>
@@ -169,7 +169,7 @@
     window.location.href = "products.html";  // navigate to the page
 }
 
-  function openCustomers() {
+  function opencustomers() {
     sessionStorage.setItem("fromIndex", "true"); // set the flag
     window.location.href = "customers.html";  // navigate to the page
 }
