--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
   function openInvoices() {
     sessionStorage.setItem("fromIndex", "true"); // set the flag
-    window.location.href = "invoicelist.html";  // navigate to the page
+    window.location.href = "Invoicelist.html";  // navigate to the page
 }
 
   function openInvoice() {
