--- a/Invoicelist.html
+++ b/Invoicelist.html
@@ -20,35 +20,33 @@
   text-decoration: none;
   color: blue;
 }
-  body { font-family: Arial, sans-serif; margin: 20px; }
-  .top-bar { display: flex; flex-wrap: wrap; align-items: center; gap: 10px; margin-bottom: 20px; }
-  .back-btn, .add-btn, .nav-btn { padding: 12px 18px; font-size: 16px; border: none; border-radius: 6px; cursor: pointer; }
-  .back-btn { background: #ef4444; color: #fff; }
-  .add-btn { background: #22c55e; color: #fff; }
-  .nav-btn { background: #334155; color: #fff; }
-  table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-  th, td { border: 1px solid #ccc; padding: 8px; text-align: left; font-size: 14px; }
-  th { background-color: #f3f3f3; }
-  input.payment-input { width: 100px; padding: 4px; }
-  input.payment-input.fully-paid { background-color: #d1fae5; } /* light green when fully paid */
-  .balance-paid { color: green; font-weight: bold; }
-  .balance-unpaid { color: red; font-weight: bold; }
-  .delete-btn { background: #ef4444; color: #fff; padding: 4px 8px; border: none; border-radius: 4px; cursor: pointer; }
-  #filter { margin-top: 10px; padding: 6px 10px; font-size: 14px; width: 300px; }
-  /* Summary box */
-  .summary-box {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    border: 1px solid #ccc;
-    padding: 12px 16px;
-    border-radius: 8px;
-    background: #f9f9f9;
-    font-size: 14px;
-    text-align: right;
-  }
+body { font-family: Arial, sans-serif; margin: 20px; }
+.top-bar { display: flex; flex-wrap: wrap; align-items: center; gap: 10px; margin-bottom: 20px; }
+.back-btn, .add-btn, .nav-btn { padding: 12px 18px; font-size: 16px; border: none; border-radius: 6px; cursor: pointer; }
+.back-btn { background: #ef4444; color: #fff; }
+.add-btn { background: #22c55e; color: #fff; }
+.nav-btn { background: #334155; color: #fff; }
+table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+th, td { border: 1px solid #ccc; padding: 8px; text-align: left; font-size: 14px; }
+th { background-color: #f3f3f3; }
+input.payment-input { width: 100px; padding: 4px; }
+input.payment-input.fully-paid { background-color: #d1fae5; }
+.balance-paid { color: green; font-weight: bold; }
+.balance-unpaid { color: red; font-weight: bold; }
+.delete-btn { background: #ef4444; color: #fff; padding: 4px 8px; border: none; border-radius: 4px; cursor: pointer; }
+#filter { margin-top: 10px; padding: 6px 10px; font-size: 14px; width: 300px; }
+.summary-box {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  border: 1px solid #ccc;
+  padding: 12px 16px;
+  border-radius: 8px;
+  background: #f9f9f9;
+  font-size: 14px;
+  text-align: right;
+}
 </style>
-
 </head>
 <body>
 
@@ -105,7 +103,6 @@ if (sessionStorage.getItem("fromIndex") !== "true") {
     throw "Access Denied";
 }
 
-// Clear the flag
 sessionStorage.removeItem("fromIndex");
 
 // ===== FETCH INVOICES FROM GITHUB =====
@@ -116,22 +113,21 @@ const filterInput = document.getElementById('filter');
 const summaryBox = document.getElementById('summary');
 
 fetch(dataUrl)
-  .then(response => response.json())
+  .then(res => res.json())
   .then(data => {
-    invoices = JSON.parse(data.invoices || "[]");
-    invoices.forEach(inv => { if (inv.payment === undefined) inv.payment = 0; });
-    renderInvoices();
+      invoices = data.invoices || [];
+      invoices.forEach(inv => { if (inv.payment === undefined) inv.payment = 0; });
+      renderInvoices();
   })
   .catch(err => {
-    console.error("Failed to load invoices from GitHub:", err);
-    invoices = [];
-    renderInvoices();
+      console.error("Failed to load invoices from GitHub:", err);
+      invoices = [];
+      renderInvoices();
   });
 
 // ===== FUNCTIONS =====
 function renderInvoices(filterText = '') {
   tbody.innerHTML = '';
-
   let totalUSDAll = 0;
   let totalCostAll = 0;
 
